# cargo-wizard

./: Cargo.toml  LICENSE  README.md
src/: api.rs  main.rs
