[package]
name = "cargo-wizard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.27"
clap = "4.4.1"
crates_io_api = "0.8.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
tokio = { version = "1.32.0", features = ["full"] }
